kubernetes/00-namespace.yaml
# Namespace dedie : isole toutes les ressources Pictionary du reste du cluster.
apiVersion: v1
kind: Namespace
metadata:
  name: pictionary
  labels:
    app: pictionary
